# espidf-component-webmanager_Dev_Fork

./: CMakeCache.txt  CMakeLists.txt  README.md  idf_component.yml
builder/: gulpfile.ts  gulpfile_config.ts  gulpfile_sensact.ts  gulpfile_usersettings.ts  paths.ts
cpp/: fingerprint_hardware.hh  fingerprint_interfaces.hh  grow_fingerprint_serial_protocol.hh  r303s.hh  r503pro.hh  r503pro_manager.hh  scheduler.hh  scheduler_timers.hh  timeseries.hh  webmanager copy.hh  webmanager.cc  webmanager.hh  webmanager_async_response.hh  webmanager_constants.hh  webmanager_interfaces.hh  webmanager_new.hh  webmanager_workingstate.inc  wifimanager_plugin.hh
cpp/webmanager_plugins/: systeminfo_plugin.hh  usersettings_plugin.hh
flatbuffers/: app.fbs  journal.fbs  ns02systeminfo.fbs  ns03functionblock.fbs  ns04heaterexperiment.fbs  ns09usersettings.fbs  ns10journal.fbs  scheduler.fbs  systeminfo.fbs  websensact.fbs
testserver/: index.ts  test.sqlite
testserver/screens/: scheduler.ts  websensact.ts
testserver/typescript/utils/: interfaces.ts  sensactapps_base.ts
usersettings/go_here/go_here/: usersettings.ts
web/style/: app.css  sensact.css  usersettings.css  weeklyschedule.css  wifimanager.css
web/templates/sensact/: sensactapps.template.ts
web/typescript/: app.ts
web/typescript/screen_controller/: websensact_controller.ts
web/typescript/utils/: extensions.ts  interfaces.ts  sensactapps_base.ts
